--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-validator",
-  "version": "0.0.4",
+  "name": "wl-vue-validator",
+  "version": "0.0.5",
   "main": "src/index.js",
   "dependencies": {
     "base64-js": "^1.1.2",
