--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^0.23.1",
     "director": "^1.2.8",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "jsx-loader": "^0.13.2",
     "less": "^2.7.1",
@@ -25,6 +26,7 @@
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "stylus-loader": "^2.1.0",
+    "url-loader": "^0.5.7",
     "vue-html-loader": "^1.2.2",
     "vue-loader": "^8.5.2",
     "vue-style-loader": "^1.0.0",
