--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "vue-lite-validator",
   "description": "Simple Vue.js input validation plugin",
-  "version": "0.0.2",
+  "version": "0.0.5",
+  "main": "src/index.js",
   "keywords": [
     "VueJS",
     "Vue",
